--- a/SecondWindow/RatSimulationProject.csproj
+++ b/SecondWindow/RatSimulationProject.csproj
@@ -66,6 +66,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="demoGraphDynamic.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="demoGraphDynamic.Designer.cs">
+      <DependentUpon>demoGraphDynamic.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +86,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="demoGraphDynamic.resx">
+      <DependentUpon>demoGraphDynamic.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
